--- a/Verbal olympiad 1 solutions.tex
+++ b/Verbal olympiad 1 solutions.tex
@@ -1,4 +1,4 @@
-\documentclass[9pt,aspectratio=169]{beamer}
+\documentclass[9pt,aspectratio=169,handout]{beamer}
 
 \usepackage{nicefrac}
 \usepackage{tabularx}
