--- a/Team attack 5.tex
+++ b/Team attack 5.tex
@@ -17,7 +17,7 @@
   \begin{enumerate}[leftmargin=3mm]
     \item $\dfrac{9}{37}$ is changed to a decimal. What digit lies in the 2022\textsuperscript{th} place to the right of the decimal point? %Set 9, 1D
     \item Emily has 21 dimes. She placed then in three piles, with an odd number of dimes in each pile. In how many different ways can she accomplish this? [\emph{Consider piles of 1, 1, 19 dimes, for example, to be equivalent to piles 1, 19, and 1 dimes.}] % Set 9, 2B
-    \item Suppose $\dfrac{2}{N}$, $\dfrac{3}{N}$, and $\dfrac{5}{N}$ are three fractions in lowest terms. What are all the possible composite whole number values for $N$ between $20$ and $80$? % Set 9, 2D
+    \item Suppose $\dfrac{2}{N}$, $\dfrac{3}{N}$, and $\dfrac{5}{N}$ are three fractions in lowest terms. Find a sum of all the possible composite whole number values for $N$ between $20$ and $80$? % Set 9, 2D
     \item The Mathematical Olympiad began in the prime year 1979. Find the product of the fractions below in a simplest form:
     \[ 
       \left(1 - \frac{1}{1980}\right) \times \left(1 - \frac{1}{1981}\right) \times \ldots \times \left(1 - \frac{1}{2022}\right). 
@@ -69,7 +69,7 @@
   \begin{enumerate}[leftmargin=3mm]
     \item $\dfrac{9}{37}$ is changed to a decimal. What digit lies in the 2022\textsuperscript{th} place to the right of the decimal point? %Set 9, 1D
     \item Emily has 21 dimes. She placed then in three piles, with an odd number of dimes in each pile. In how many different ways can she accomplish this? [\emph{Consider piles of 1, 1, 19 dimes, for example, to be equivalent to piles 1, 19, and 1 dimes.}] % Set 9, 2B
-    \item Suppose $\dfrac{2}{N}$, $\dfrac{3}{N}$, and $\dfrac{5}{N}$ are three fractions in lowest terms. What are all the possible composite whole number values for $N$ between $20$ and $80$? % Set 9, 2D
+    \item Suppose $\dfrac{2}{N}$, $\dfrac{3}{N}$, and $\dfrac{5}{N}$ are three fractions in lowest terms. Find a sum of all the possible composite whole number values for $N$ between $20$ and $80$? % Set 9, 2D
     \item The Mathematical Olympiad began in the prime year 1979. Find the product of the fractions below in a simplest form:
     \[ 
       \left(1 - \frac{1}{1980}\right) \times \left(1 - \frac{1}{1981}\right) \times \ldots \times \left(1 - \frac{1}{2022}\right). 
