--- a/17 - Binomials.tex
+++ b/17 - Binomials.tex
@@ -217,26 +217,66 @@
   \end{columns}
 \end{frame}
 
+% \begin{frame}{Exercises}
+%   \begin{columns}[T]
+%     \begin{column}{0.5\textwidth}
+%       \begin{enumerate}
+%         \item Given that $9876^2 = 97{,}535{,}376$, find $9877^2$ without needing to compute the square of $9877$.
+%         \item What is the greatest prime factor of $9^18 - 3^32$?
+%         \item What is the sum of the coefficients for all $9$ terms of $(x + y)^8$?
+%         \item What is the coefficient of the $x^2y^3$ term in the expansion of $\left(\dfrac{1}{2} x + 2y\right)^5$?
+%         \seti
+%       \end{enumerate}
+%     \end{column}
+%     \begin{column}{0.5\textwidth}
+%       Questions $5-7$ are all parts of the same problem: if $a + b = 1$ and $a^2 + b^2 = 2$ find $a^4 + b^4.$
+%       \begin{enumerate}
+%         \conti
+%         \item For question 5, first expand the binomial $(a + b)^2$ and find the value of $ab$ given that $a + b = 1$ and $a^2 + b^2 = 2.$
+%         \item For question 6, write out the binomial expansion of $(a^2 + b^2)^2$ in terms with powers of $a$ and $b$.
+%         \item For question 7, substitute the value of $ab$ from question 5 into the expansion you found in question 6 to solve for $a^4 + b^4$.
+%         \item The hypotenuse of a right triangle is $25/2$.  If the product of the lengths of the two legs of the right triangle is $42$, what is the perimeter of the triangle.\\
+%         (\emph{Hint}: think of how the identity for the sum of squares can help you solve this problem.)     
+%       \end{enumerate}
+%     \end{column}
+%   \end{columns}
+% \end{frame}
+
+% \begin{frame}{Challenge problems}
+%   \begin{columns}[T]
+%     \begin{column}{0.5\textwidth}
+%       \begin{enumerate}
+%         \item What is the sum of the prime factors of  $2^{16} - 1$?
+%         \item Find all possible values of $ab$ given that $a+ b = 2$ and $a^4 + b^4 = 16$. 
+%         \item Given that the sum of a number $n$ and its reciprocal $1/n$ is equal to $1$, find the sum of $n^3 + (1/n)^3$? \\
+%         (\emph{Hint}: by using identities and manipulations, this sum can be found without ever solving for the number itself, which is helpful as the number itself is a \emph{complex number} – a~number with real and imaginary parts.)
+%         \item Find the sum of all positive integers $x$ such that there is a positive integer $y$ satisfying $9x^2 – 4y^2 = 2021$.
+%       \end{enumerate}
+%     \end{column}
+%     \begin{column}{0.5\textwidth}
+%     \end{column}
+%   \end{columns}
+% \end{frame}
+
 \begin{frame}{Exercises}
   \begin{columns}[T]
     \begin{column}{0.5\textwidth}
       \begin{enumerate}
-        \item Given that $9876^2 = 97{,}535{,}376$, find $9877^2$ without needing to compute the square of $9877$.
-        \item What is the greatest prime factor of $9^18 - 3^32$?
-        \item What is the sum of the coefficients for all $9$ terms of $(x + y)^8$?
-        \item What is the coefficient of the $x^2y^3$ term in the expansion of $\left(\dfrac{1}{2} x + 2y\right)^5$?
+        \item The \emph{harmonic mean} of a set of non-zero numbers is the reciprocal of the average of the reciprocals of the numbers. What is the harmonic mean of $1$, $2$, and $4$? %AMC 8 2018, Problem 10
+        \item If $\dfrac{x+1}{x} = 2$, what is the value of $\dfrac{x^2 + 1}{x^2}$?
+        \item What is the greatest integer value of $x$ such that $\dfrac{x^2 + 2x + 5}{x-3}$ is an integer?
+        \item What is the value of the product\[\left(\frac{1\cdot3}{2\cdot2}\right)\left(\frac{2\cdot4}{3\cdot3}\right)\left(\frac{3\cdot5}{4\cdot4}\right)\cdots\left(\frac{97\cdot99}{98\cdot98}\right)\left(\frac{98\cdot100}{99\cdot99}\right)?\] %AMC 8 2019, Problem 17
+        \item What is the value of \[\frac{2022^3 - 2 \cdot 2022^2 \cdot 2023 + 3 \cdot 2022 \cdot 2023^2 - 2023^3 + 1}{2022 \cdot 2023}?\]
         \seti
       \end{enumerate}
     \end{column}
     \begin{column}{0.5\textwidth}
-      Questions $5-7$ are all parts of the same problem: if $a + b = 1$ and $a^2 + b^2 = 2$ find $a^4 + b^4.$
       \begin{enumerate}
         \conti
-        \item For question 5, first expand the binomial $(a + b)^2$ and find the value of $ab$ given that $a + b = 1$ and $a^2 + b^2 = 2.$
-        \item For question 6, write out the binomial expansion of $(a^2 + b^2)^2$ in terms with powers of $a$ and $b$.
-        \item For question 7, substitute the value of $ab$ from question 5 into the expansion you found in question 6 to solve for $a^4 + b^4$.
-        \item The hypotenuse of a right triangle is $25/2$.  If the product of the lengths of the two legs of the right triangle is $42$, what is the perimeter of the triangle.\\
-        (\emph{Hint}: think of how the identity for the sum of squares can help you solve this problem.)     
+        \item If $\left(\dfrac1{x+y}\right)\left(\dfrac1x+\dfrac1y\right)=\dfrac1{13}$, what is the value of the product of $x$ and $y$?
+        \item If $a\clubsuit b=\dfrac{ab}{a+b}$ and $a\clubsuit 4=3,$ what is the value of $a$?
+        \item Compute the sum of the distinct prime factors of
+        $2^{15} + 2^8 − 2^7 − 1$. % PI Fermat, 2022, Problem 17
       \end{enumerate}
     \end{column}
   \end{columns}
@@ -246,11 +286,10 @@
   \begin{columns}[T]
     \begin{column}{0.5\textwidth}
       \begin{enumerate}
-        \item What is the sum of the prime factors of  $2^{16} - 1$?
-        \item Find all possible values of $ab$ given that $a+ b = 2$ and $a^4 + b^4 = 16$. 
-        \item Given that the sum of a number $n$ and its reciprocal $1/n$ is equal to $1$, find the sum of $n^3 + (1/n)^3$? \\
-        (\emph{Hint}: by using identities and manipulations, this sum can be found without ever solving for the number itself, which is helpful as the number itself is a \emph{complex number} – a~number with real and imaginary parts.)
-        \item Find the sum of all positive integers $x$ such that there is a positive integer $y$ satisfying $9x^2 – 4y^2 = 2021$.
+        \item How many perfect cubes lie between $2^8+1$ and $2^{18}+1$, inclusive? %AMC 8, 2018, Problem 25
+        \item Let $a$, $b$, and $c$ be three distinct one-digit numbers. What is the maximum value of the sum of the roots of the equation $(x-a)(x-b)+(x-b)(x-c)=0$? %AMC 10b 2015, Problem 14
+        \item If $y+4 = (x-2)^2,$ $x+4 = (y-2)^2$, and $x \neq y$, what is the value of $x^2+y^2$? %AMC 10a 2015, Problem 16
+        \item For some particular value of $N$, when $(a+b+c+d+1)^N$ is expanded and like terms are combined, the resulting expression contains exactly $1001$ terms that include all four variables $a, b,c,$ and $d$, each to some positive power. What is $N$? %AMC 10a 2016, Problem 20
       \end{enumerate}
     \end{column}
     \begin{column}{0.5\textwidth}
