Add problems to 08 - PIE

--- a/08 - Inclusion Exclusion Principle.tex
+++ b/08 - Inclusion Exclusion Principle.tex
@@ -392,25 +392,67 @@
   \end{columns}
 \end{frame}
 
-\begin{frame}{Exercises}
+% \begin{frame}{Exercises}
+%   \begin{columns}[T]
+%     \begin{column}{0.5\textwidth}
+%       \begin{enumerate}
+%         \item What is the smallest possible average of four distinct positive even integers?
+%         \item In a gymnastics competition, judge’s marks are integers $0-10$ inclusive.  There are $6$ judges, and the athlete's score is calculated by taking the average of the remaining $4$ marks after the highest and lowest marks are eliminated.  The winning gymnast had a $8.5$ score, while the second place finisher had a~$8.0$ score.  If the both received identical lowest marks, could the highest marks they received have changed the order of finish if they were included in the scoring average?  Explain your reasoning.
+%         \item The \emph{harmonic} mean of a set of non-zero numbers is the reciprocal of the average of the reciprocals of the numbers. 
+%         What is the harmonic mean of $1$, $2$, and $4$?
+%         \seti
+%       \end{enumerate}
+%     \end{column}
+%     \begin{column}{0.5\textwidth}
+%       \begin{enumerate}
+%         \conti
+%         \item What is median of the following data set:\\ $2$, $3$, $3$, $4$, $4$, $4$?
+%         \item In school's band string section, $28$ students play the violin, $18$ students play the viola, and $12$ students play both.  How many students are in the string section?
+%         \item There are $25$ students in a class. $12$ of them are on a football team and $14$ are on a soccer team. If $3$ students are on neither of these teams, how many students are on both the football and soccer teams?
+%         \item How many integer pair $(x,\ y)$ solutions are there to $x^2 + y^2 < 10$?
+%         \item If there are breakout rooms to work on $4$ different types of math problems, how many ways are there to split $20$ students into the breakout rooms, if each breakout room must contain at least $3$ students?
+%       \end{enumerate}
+%     \end{column}
+%   \end{columns}
+% \end{frame}
+
+% \begin{frame}{Challenge problems}
+%   \begin{columns}[T]
+%     \begin{column}{0.5\textwidth}
+%       \begin{enumerate}
+%         \item The Girl Scouts sold boxes of cookies outside of the school one morning.  If they sold $252$ boxes of cookies to $100$ customers (and every customer bought at least one box of cookies), what is the maximum possible median number of boxes of cookies bought that morning?
+%         \item In Graham Middle School's woodwind section, $21$ students play clarinet, $16$ students play oboe, $13$ students play saxophone, $6$ students play clarinet and oboe, $5$ students play clarinet and saxophone, $4$ students play oboe and saxophone.  If there are $37$ students total in the woodwind section, how many play all $3$ instruments?
+%         \item How many distinct positive integer triplets $(x,\ y,\ z)$ are solutions to $x + y + z = 12$?
+%         \seti
+%       \end{enumerate}
+%     \end{column}
+%     \begin{column}{0.5\textwidth}
+%       \begin{enumerate}
+%         \conti
+%         \item When a fair $6$-sided die is rolled $7$ times, the probability that sum of the $7$ rolls will be $10$ can be represented as $\dfrac{n}{6^7}$.  Find the value of~$n$.
+%       \end{enumerate}
+%     \end{column}
+%   \end{columns}
+% \end{frame}
+
+\begin{frame}{Excercises}
   \begin{columns}[T]
     \begin{column}{0.5\textwidth}
       \begin{enumerate}
-        \item What is the smallest possible average of four distinct positive even integers?
-        \item In a gymnastics competition, judge’s marks are integers $0-10$ inclusive.  There are $6$ judges, and the athlete's score is calculated by taking the average of the remaining $4$ marks after the highest and lowest marks are eliminated.  The winning gymnast had a $8.5$ score, while the second place finisher had a~$8.0$ score.  If the both received identical lowest marks, could the highest marks they received have changed the order of finish if they were included in the scoring average?  Explain your reasoning.
-        \item The \emph{harmonic} mean of a set of non-zero numbers is the reciprocal of the average of the reciprocals of the numbers. 
-        What is the harmonic mean of $1$, $2$, and $4$?
+        \item Four students take an exam. Three of their scores are $70, 80,$ and $90$. If the average of their four scores is $70$, then what is the remaining score? %AMC 8 2016, Problem 3
+        \item How many subsets of two elements can be removed from the set $\{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11\}$ so that the mean (average) of the remaining numbers is $6$? %AMC 8 2015, Problem 13
+        \item Jefferson Middle School has the same number of boys and girls. $\dfrac{3}{4}$ of the girls and $\dfrac{2}{3}$ of the boys went on a field trip. What fraction of the students on the field trip were girls? %AMC8 2016, Problem 12
+        \item The mean, median, and unique mode of the positive integers 3, 4, 5, 6, 6, 7, and $x$ are all equal. What is the value of $x$? %AMC 8 2012, Problem 11
+        \item How many ways to distribute $10$ candies among $4$ kids?
         \seti
       \end{enumerate}
     \end{column}
     \begin{column}{0.5\textwidth}
       \begin{enumerate}
         \conti
-        \item What is median of the following data set:\\ $2$, $3$, $3$, $4$, $4$, $4$?
-        \item In school's band string section, $28$ students play the violin, $18$ students play the viola, and $12$ students play both.  How many students are in the string section?
-        \item There are $25$ students in a class. $12$ of them are on a football team and $14$ are on a soccer team. If $3$ students are on neither of these teams, how many students are on both the football and soccer teams?
-        \item How many integer pair $(x,\ y)$ solutions are there to $x^2 + y^2 < 10$?
-        \item If there are breakout rooms to work on $4$ different types of math problems, how many ways are there to split $20$ students into the breakout rooms, if each breakout room must contain at least $3$ students?
+        \item How many ways to distribute $10$ candies among $4$ kids, so each kid should get at least one candy?
+        \item If 20 girls are on my school's soccer team, 25 girls are on my school's hockey team, and 11 girls play both sports, then how many girls play soccer and hockey? % AOPS Interm Counting, Problem 3.1
+        \item At one hospital, there are $100$ patients, all of whom have at least one of the following ailments: a cold, the flu, or an earache. $38$ have a cold, $40$ have the flu, and some number have earaches. If $17$ have both colds and the flu, $10$ have colds and earaches, $23$ have the flu and earaches, and $7$ have all three, how many have an earache? %AOPS Vol 1, Example 27-3
       \end{enumerate}
     \end{column}
   \end{columns}
@@ -420,16 +462,21 @@
   \begin{columns}[T]
     \begin{column}{0.5\textwidth}
       \begin{enumerate}
-        \item The Girl Scouts sold boxes of cookies outside of the school one morning.  If they sold $252$ boxes of cookies to $100$ customers (and every customer bought at least one box of cookies), what is the maximum possible median number of boxes of cookies bought that morning?
-        \item In Graham Middle School's woodwind section, $21$ students play clarinet, $16$ students play oboe, $13$ students play saxophone, $6$ students play clarinet and oboe, $5$ students play clarinet and saxophone, $4$ students play oboe and saxophone.  If there are $37$ students total in the woodwind section, how many play all $3$ instruments?
-        \item How many distinct positive integer triplets $(x,\ y,\ z)$ are solutions to $x + y + z = 12$?
+        \item One day the Beverage Barn sold 252 cans of soda to 100 customers, and every customer bought at least one can of soda. What is the maximum possible median number of cans of soda bought per customer on that day? %AMC 8 2014, Problem 24
+        \item Mrs. Sanders has three grandchildren, who call her regularly. One calls her every three days, one calls her every four days, and one calls her every five days. All three called her on December 31, 2022. On how many days during the next year did she not receive a phone call from any of her grandchildren? % AMC 8 2017, Problem 24
+        \item A list of $2022$ positive integers has a unique mode, which occurs exactly $10$ times. What is the least number of distinct values that can occur in the list? % AMC 10b 2018, Problem 14
         \seti
       \end{enumerate}
     \end{column}
     \begin{column}{0.5\textwidth}
       \begin{enumerate}
         \conti
-        \item When a fair $6$-sided die is rolled $7$ times, the probability that sum of the $7$ rolls will be $10$ can be represented as $\dfrac{n}{6^7}$.  Find the value of~$n$.
+        \item Pat is to select six cookies from a tray containing only
+        chocolate chip, oatmeal, and peanut butter cookies. There are at least six of
+        each of these three kinds of cookies on the tray. How many different assortments
+        of six cookies can be selected? %2003 AMC 10A 21
+       
+
       \end{enumerate}
     \end{column}
   \end{columns}
